--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -31,7 +31,7 @@
             android:layout_marginEnd="12dp"
             android:layout_marginBottom="8dp"
             android:layout_weight="1"
-            android:backgroundTint="#FFFFFF"
+             android:background="@color/white"
             app:cardCornerRadius="15dp"
             app:strokeColor="@color/text_color"
             app:strokeWidth=".5dp">
@@ -82,6 +82,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginStart="8dp"
                         android:layout_weight="1"
+                        android:padding="6dp"
                         android:text="@string/price"
                         android:textStyle="bold" />
 
@@ -123,6 +124,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginStart="8dp"
                         android:layout_weight="1"
+                        android:padding="6dp"
                         android:text="@string/product_quantity"
                         android:textStyle="bold" />
 
