Fixed all bug and make design better

--- a/app/src/main/res/drawable/ic_side_left_bg.xml
+++ b/app/src/main/res/drawable/ic_side_left_bg.xml
@@ -4,5 +4,6 @@
         android:height="787dp"/>
     <solid android:color="@color/orange"/>
     <corners
-        android:topLeftRadius="17dp" />
+        android:topLeftRadius="17dp"
+        android:bottomLeftRadius="17dp"/>
 </shape>
