--- a/app/src/main/res/layout/fragment_dashbord.xml
+++ b/app/src/main/res/layout/fragment_dashbord.xml
@@ -17,7 +17,7 @@
             android:layout_height="300dp"
 
             android:layout_marginBottom="50dp"
-            android:visibility="invisible"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/dashbord_Product_NoData"
             app:layout_constraintHorizontal_bias="0.5"
@@ -32,9 +32,10 @@
             style="@style/viewParent.headerText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="18sp"
             android:text="@string/No_product_Add"
             android:textColor="@color/second_text_color"
-            android:visibility="invisible"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/lottieAnimationView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
