--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -58,7 +58,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
-                            android:text="@{order.address.fullname}"
+                            android:text="@{order.address_buyer.fullname}"
                             android:textSize="10sp"
                             app:layout_constraintBottom_toBottomOf="@+id/order_textView8"
                             app:layout_constraintStart_toEndOf="@+id/order_textView8"
@@ -150,7 +150,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="3dp"
-                            setprice="@{order.address.phonenumber}"
+                            setprice="@{order.address_buyer.phonenumber}"
                             android:textSize="10sp"
                             app:layout_constraintBottom_toBottomOf="@+id/order_textView10"
                             app:layout_constraintStart_toEndOf="@+id/order_textView10"
