--- a/app/src/main/res/layout/activity_cartlist.xml
+++ b/app/src/main/res/layout/activity_cartlist.xml
@@ -39,6 +39,7 @@
             app:titleTextColor="@color/white" />
 
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/checkout_linearLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
