--- a/app/src/main/res/layout/activity_complete_profile.xml
+++ b/app/src/main/res/layout/activity_complete_profile.xml
@@ -53,8 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 app:cardCornerRadius="10dp"
-                app:strokeColor="@color/text_color"
-                app:strokeWidth=".5dp">
+               >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -129,7 +128,7 @@
                             android:background="@drawable/gender_selector"
                             android:button="@null"
                             android:fontFamily="@font/iranyekanwebbold"
-                            android:text="Male"
+                            android:text="@string/male"
                             android:textAlignment="center"
                             android:textColor="@color/gender_selector_text_color" />
 
@@ -142,7 +141,7 @@
                             android:background="@drawable/gender_selector"
                             android:button="@null"
                             android:fontFamily="@font/iranyekanwebbold"
-                            android:text="Female"
+                            android:text="@string/female"
                             android:textAlignment="center"
                             android:textColor="@color/gender_selector_text_color" />
                     </RadioGroup>
@@ -163,8 +162,6 @@
                         android:text="@string/save"
                         app:backgroundTint="@null"
                         android:background="@drawable/button_background"
-
-
                       />
 
                 </LinearLayout>
