--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,10 +17,13 @@
     <style name="Splash_Theme" parent="Theme.MaterialComponents.Light.NoActionBar">
      <item name="windowNoTitle">true</item>
         <item name="android:statusBarColor">@color/orange</item>
+            <item name="snackbarStyle">@style/MySnackbar</item>
 
     </style>
 
-
+    <style name="MySnackbar" parent="Widget.MaterialComponents.Snackbar">
+        <item name="android:layout_margin">32dp</item>
+    </style>
 
     <style name="viewParent">
         <item name="android:layout_width">wrap_content</item>
@@ -47,8 +50,9 @@
         <item name="android:layout_width">match_parent</item>
         <item name="counterTextAppearance">@style/text_counter</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="boxStrokeColor">@color/second_text_color</item>
+        <item name="boxStrokeColor">#DCDCDC</item>
         <item name="boxStrokeWidth">0.4dp</item>
+        <item name="boxBackgroundColor">@color/white</item>
         <item name="android:textCursorDrawable">@drawable/cursor</item>
         <item name="boxCornerRadiusBottomEnd">10dp</item>
         <item name="boxCornerRadiusBottomStart">10dp</item>
@@ -63,7 +67,7 @@
         <item name="fontFamily">@font/iranyekanweblight</item>
         <item name="android:drawableTint">@color/second_text_color</item>
         <item name="android:textSize">@dimen/newsMoreTextSize</item>
-        <item name="android:textAlignment">center</item>
+        <item name="android:drawablePadding">4dp</item>
         <item name="android:maxLines">1</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">@color/black</item>
